# art

./: .gitignore  .gitmodules  Android.bp  Blueprints  CHANGES.md  CHANGES.sh  CMakeLists.txt  NOTICE  README.md  makeScript_weisgerber.sh  makescript_weisgerber.sh
compiler/: Android.bp  Android.mk  Blueprints  oat_writer.cc  oat_writer.h
compiler/driver/: compiler_driver.cc
compiler/optimizing/: optimizing_compiler.cc
dex2oat/: Android.bp  Blueprints  dex2oat.cc
runtime/: Android.bp  Blueprints  class_linker.h  oat.cc  oat.h  oat_file_manager.cc  parsed_options.cc  runtime.cc  runtime.h
runtime/base/: arena_object.h  logging.cc  logging.h  macros.h
runtime/native/: dalvik_system_ZygoteHooks.cc
sigchainlib/: Blueprints
