cmake_minimum_required(VERSION 3.6)

project(art CXX)

set(CMAKE_CXX_STANDARD 11)

#set(JAVA_HOME "/usr/lib/jvm/default-java")
#set(JAVA_INCLUDE_PATH "/usr/lib/jvm/default-java/include")

# find . -type f -iname "*.h" -o -iname "*.cc
set(SOURCE_FILES
    cmdline/cmdline.h
    cmdline/cmdline_parse_result.h
    cmdline/cmdline_parser.h
    cmdline/cmdline_parser_test.cc
    cmdline/cmdline_result.h
    cmdline/cmdline_type_parser.h
    cmdline/cmdline_types.h
    cmdline/detail/cmdline_debug_detail.h
    cmdline/detail/cmdline_parse_argument_detail.h
    cmdline/detail/cmdline_parser_detail.h
    cmdline/memory_representation.h
    cmdline/token_range.h
    cmdline/unit.h
    compiler/buffered_output_stream.cc
    compiler/buffered_output_stream.h
    compiler/cfi_test.h
    compiler/common_compiler_test.cc
    compiler/common_compiler_test.h
    compiler/compiled_class.h
    compiler/compiled_method.cc
    compiler/compiled_method.h
    compiler/compiler.cc
    compiler/compiler.h
    compiler/dex/bb_optimizations.cc
    compiler/dex/bb_optimizations.h
    compiler/dex/compiler_enums.h
    compiler/dex/compiler_ir.cc
    compiler/dex/compiler_ir.h
    compiler/dex/dataflow_iterator-inl.h
    compiler/dex/dataflow_iterator.h
    compiler/dex/dex_flags.h
    compiler/dex/dex_to_dex_compiler.cc
    compiler/dex/dex_types.h
    compiler/dex/global_value_numbering.cc
    compiler/dex/global_value_numbering.h
    compiler/dex/global_value_numbering_test.cc
    compiler/dex/gvn_dead_code_elimination.cc
    compiler/dex/gvn_dead_code_elimination.h
    compiler/dex/gvn_dead_code_elimination_test.cc
    compiler/dex/local_value_numbering.cc
    compiler/dex/local_value_numbering.h
    compiler/dex/local_value_numbering_test.cc
    compiler/dex/mir_analysis.cc
    compiler/dex/mir_dataflow.cc
    compiler/dex/mir_field_info.cc
    compiler/dex/mir_field_info.h
    compiler/dex/mir_graph.cc
    compiler/dex/mir_graph.h
    compiler/dex/mir_graph_test.cc
    compiler/dex/mir_method_info.cc
    compiler/dex/mir_method_info.h
    compiler/dex/mir_optimization.cc
    compiler/dex/mir_optimization_test.cc
    compiler/dex/pass.h
    compiler/dex/pass_driver.h
    compiler/dex/pass_driver_me.h
    compiler/dex/pass_driver_me_opts.cc
    compiler/dex/pass_driver_me_opts.h
    compiler/dex/pass_driver_me_post_opt.cc
    compiler/dex/pass_driver_me_post_opt.h
    compiler/dex/pass_manager.cc
    compiler/dex/pass_manager.h
    compiler/dex/pass_me.h
    compiler/dex/post_opt_passes.cc
    compiler/dex/post_opt_passes.h
    compiler/dex/quick/arm64/arm64_lir.h
    compiler/dex/quick/arm64/assemble_arm64.cc
    compiler/dex/quick/arm64/backend_arm64.h
    compiler/dex/quick/arm64/call_arm64.cc
    compiler/dex/quick/arm64/codegen_arm64.h
    compiler/dex/quick/arm64/fp_arm64.cc
    compiler/dex/quick/arm64/int_arm64.cc
    compiler/dex/quick/arm64/target_arm64.cc
    compiler/dex/quick/arm64/utility_arm64.cc
    compiler/dex/quick/arm/arm_lir.h
    compiler/dex/quick/arm/assemble_arm.cc
    compiler/dex/quick/arm/backend_arm.h
    compiler/dex/quick/arm/call_arm.cc
    compiler/dex/quick/arm/codegen_arm.h
    compiler/dex/quick/arm/fp_arm.cc
    compiler/dex/quick/arm/int_arm.cc
    compiler/dex/quick/arm/target_arm.cc
    compiler/dex/quick/arm/utility_arm.cc
    compiler/dex/quick/codegen_util.cc
    compiler/dex/quick/dex_file_method_inliner.cc
    compiler/dex/quick/dex_file_method_inliner.h
    compiler/dex/quick/dex_file_to_method_inliner_map.cc
    compiler/dex/quick/dex_file_to_method_inliner_map.h
    compiler/dex/quick/gen_common.cc
    compiler/dex/quick/gen_invoke.cc
    compiler/dex/quick/gen_loadstore.cc
    compiler/dex/quick/lazy_debug_frame_opcode_writer.cc
    compiler/dex/quick/lazy_debug_frame_opcode_writer.h
    compiler/dex/quick/local_optimizations.cc
    compiler/dex/quick/mips/assemble_mips.cc
    compiler/dex/quick/mips/backend_mips.h
    compiler/dex/quick/mips/call_mips.cc
    compiler/dex/quick/mips/codegen_mips.h
    compiler/dex/quick/mips/fp_mips.cc
    compiler/dex/quick/mips/int_mips.cc
    compiler/dex/quick/mips/mips_lir.h
    compiler/dex/quick/mips/target_mips.cc
    compiler/dex/quick/mips/utility_mips.cc
    compiler/dex/quick/mir_to_lir-inl.h
    compiler/dex/quick/mir_to_lir.cc
    compiler/dex/quick/mir_to_lir.h
    compiler/dex/quick/quick_cfi_test.cc
    compiler/dex/quick/quick_compiler.cc
    compiler/dex/quick/quick_compiler.h
    compiler/dex/quick/quick_compiler_factory.h
    compiler/dex/quick/ralloc_util.cc
    compiler/dex/quick/resource_mask.cc
    compiler/dex/quick/resource_mask.h
    compiler/dex/quick/x86/assemble_x86.cc
    compiler/dex/quick/x86/backend_x86.h
    compiler/dex/quick/x86/call_x86.cc
    compiler/dex/quick/x86/codegen_x86.h
    compiler/dex/quick/x86/fp_x86.cc
    compiler/dex/quick/x86/int_x86.cc
    compiler/dex/quick/x86/quick_assemble_x86_test.cc
    compiler/dex/quick/x86/target_x86.cc
    compiler/dex/quick/x86/utility_x86.cc
    compiler/dex/quick/x86/x86_lir.h
    compiler/dex/quick_compiler_callbacks.cc
    compiler/dex/quick_compiler_callbacks.h
    compiler/dex/reg_location.h
    compiler/dex/reg_storage.h
    compiler/dex/reg_storage_eq.h
    compiler/dex/ssa_transformation.cc
    compiler/dex/type_inference.cc
    compiler/dex/type_inference.h
    compiler/dex/type_inference_test.cc
    compiler/dex/verification_results.cc
    compiler/dex/verification_results.h
    compiler/dex/verified_method.cc
    compiler/dex/verified_method.h
    compiler/dex/vreg_analysis.cc
    compiler/driver/compiler_driver-inl.h
    compiler/driver/compiler_driver.cc
    compiler/driver/compiler_driver.h
    compiler/driver/compiler_driver_test.cc
    compiler/driver/compiler_options.cc
    compiler/driver/compiler_options.h
    compiler/driver/dex_compilation_unit.cc
    compiler/driver/dex_compilation_unit.h
    compiler/dwarf/debug_frame_opcode_writer.h
    compiler/dwarf/debug_info_entry_writer.h
    compiler/dwarf/debug_line_opcode_writer.h
    compiler/dwarf/dwarf_constants.h
    compiler/dwarf/dwarf_test.cc
    compiler/dwarf/dwarf_test.h
    compiler/dwarf/headers.h
    compiler/dwarf/register.h
    compiler/dwarf/writer.h
    compiler/elf_builder.h
    compiler/elf_writer.cc
    compiler/elf_writer.h
    compiler/elf_writer_debug.cc
    compiler/elf_writer_debug.h
    compiler/elf_writer_quick.cc
    compiler/elf_writer_quick.h
    compiler/elf_writer_test.cc
    compiler/file_output_stream.cc
    compiler/file_output_stream.h
    compiler/gc_map_builder.h
    compiler/image_test.cc
    compiler/image_writer.cc
    compiler/image_writer.h
    compiler/jit/jit_compiler.cc
    compiler/jit/jit_compiler.h
    compiler/jni/jni_cfi_test.cc
    compiler/jni/jni_compiler_test.cc
    compiler/jni/quick/arm64/calling_convention_arm64.cc
    compiler/jni/quick/arm64/calling_convention_arm64.h
    compiler/jni/quick/arm/calling_convention_arm.cc
    compiler/jni/quick/arm/calling_convention_arm.h
    compiler/jni/quick/calling_convention.cc
    compiler/jni/quick/calling_convention.h
    compiler/jni/quick/jni_compiler.cc
    compiler/jni/quick/jni_compiler.h
    compiler/jni/quick/mips64/calling_convention_mips64.cc
    compiler/jni/quick/mips64/calling_convention_mips64.h
    compiler/jni/quick/mips/calling_convention_mips.cc
    compiler/jni/quick/mips/calling_convention_mips.h
    compiler/jni/quick/x86/calling_convention_x86.cc
    compiler/jni/quick/x86/calling_convention_x86.h
    compiler/jni/quick/x86_64/calling_convention_x86_64.cc
    compiler/jni/quick/x86_64/calling_convention_x86_64.h
    compiler/linker/arm64/relative_patcher_arm64.cc
    compiler/linker/arm64/relative_patcher_arm64.h
    compiler/linker/arm64/relative_patcher_arm64_test.cc
    compiler/linker/arm/relative_patcher_arm_base.cc
    compiler/linker/arm/relative_patcher_arm_base.h
    compiler/linker/arm/relative_patcher_thumb2.cc
    compiler/linker/arm/relative_patcher_thumb2.h
    compiler/linker/arm/relative_patcher_thumb2_test.cc
    compiler/linker/relative_patcher.cc
    compiler/linker/relative_patcher.h
    compiler/linker/relative_patcher_test.h
    compiler/linker/x86/relative_patcher_x86.cc
    compiler/linker/x86/relative_patcher_x86.h
    compiler/linker/x86/relative_patcher_x86_base.cc
    compiler/linker/x86/relative_patcher_x86_base.h
    compiler/linker/x86/relative_patcher_x86_test.cc
    compiler/linker/x86_64/relative_patcher_x86_64.cc
    compiler/linker/x86_64/relative_patcher_x86_64.h
    compiler/linker/x86_64/relative_patcher_x86_64_test.cc
    compiler/oat_test.cc
    compiler/oat_writer.cc
    compiler/oat_writer.h
    compiler/optimizing/artist/artist.cc
    compiler/optimizing/artist/artist.h
    compiler/optimizing/artist/artist_log.cc
    compiler/optimizing/artist/artist_log.h
    compiler/optimizing/artist/artist_method_visitor.cc
    compiler/optimizing/artist/artist_method_visitor.h
    compiler/optimizing/artist/artist_utils.cc
    compiler/optimizing/artist/artist_utils.h
    compiler/optimizing/artist/blacklist.cc
    compiler/optimizing/artist/blacklist.h
    compiler/optimizing/artist/env/analyzer_environment.cc
    compiler/optimizing/artist/env/analyzer_environment.h
    compiler/optimizing/artist/env/artist_environment.cc
    compiler/optimizing/artist/env/artist_environment.h
    compiler/optimizing/artist/env/codelib.cc
    compiler/optimizing/artist/env/codelib.h
    compiler/optimizing/artist/env/codelib_environment.cc
    compiler/optimizing/artist/env/codelib_environment.h
    compiler/optimizing/artist/env/java_env.cc
    compiler/optimizing/artist/env/java_env.h
    compiler/optimizing/artist/injection/boolean.h
    compiler/optimizing/artist/injection/byte.h
    compiler/optimizing/artist/injection/char.h
    compiler/optimizing/artist/injection/double.h
    compiler/optimizing/artist/injection/float.h
    compiler/optimizing/artist/injection/injection.cc
    compiler/optimizing/artist/injection/injection.h
    compiler/optimizing/artist/injection/injection_visitor.cc
    compiler/optimizing/artist/injection/injection_visitor.h
    compiler/optimizing/artist/injection/integer.h
    compiler/optimizing/artist/injection/long.h
    compiler/optimizing/artist/injection/object.h
    compiler/optimizing/artist/injection/parameter.cc
    compiler/optimizing/artist/injection/parameter.h
    compiler/optimizing/artist/injection/permissions.cc
    compiler/optimizing/artist/injection/permissions.h
    compiler/optimizing/artist/injection/primitives.h
    compiler/optimizing/artist/injection/short.h
    compiler/optimizing/artist/injection/string.h
    compiler/optimizing/artist/injection/target.cc
    compiler/optimizing/artist/injection/target.h
    compiler/optimizing/artist/injection/visitor_keys.cc
    compiler/optimizing/artist/injection/visitor_keys.h
    compiler/optimizing/artist/method_info.cc
    compiler/optimizing/artist/method_info.h
    compiler/optimizing/artist/method_info_factory.cc
    compiler/optimizing/artist/method_info_factory.h
    compiler/optimizing/artist/modules/analyzer/logtimization.cc
    compiler/optimizing/artist/modules/analyzer/logtimization.h
    compiler/optimizing/artist/modules/generic/injections.h
    compiler/optimizing/artist/modules/generic/universal_artist.cc
    compiler/optimizing/artist/modules/generic/universal_artist.h
    compiler/optimizing/artist/modules/method-tracing/trace_artist.cc
    compiler/optimizing/artist/modules/method-tracing/trace_artist.h
    compiler/optimizing/artist/param_finder.cc
    compiler/optimizing/artist/param_finder.h
    compiler/optimizing/artist/verbose_printer.cc
    compiler/optimizing/artist/verbose_printer.h
    compiler/optimizing/boolean_simplifier.cc
    compiler/optimizing/boolean_simplifier.h
    compiler/optimizing/bounds_check_elimination.cc
    compiler/optimizing/bounds_check_elimination.h
    compiler/optimizing/bounds_check_elimination_test.cc
    compiler/optimizing/builder.cc
    compiler/optimizing/builder.h
    compiler/optimizing/code_generator.cc
    compiler/optimizing/code_generator.h
    compiler/optimizing/code_generator_arm64.cc
    compiler/optimizing/code_generator_arm64.h
    compiler/optimizing/code_generator_arm.cc
    compiler/optimizing/code_generator_arm.h
    compiler/optimizing/code_generator_mips64.cc
    compiler/optimizing/code_generator_mips64.h
    compiler/optimizing/code_generator_utils.cc
    compiler/optimizing/code_generator_utils.h
    compiler/optimizing/code_generator_x86.cc
    compiler/optimizing/code_generator_x86.h
    compiler/optimizing/code_generator_x86_64.cc
    compiler/optimizing/code_generator_x86_64.h
    compiler/optimizing/codegen_test.cc
    compiler/optimizing/common_arm64.h
    compiler/optimizing/constant_folding.cc
    compiler/optimizing/constant_folding.h
    compiler/optimizing/constant_folding_test.cc
    compiler/optimizing/dead_code_elimination.cc
    compiler/optimizing/dead_code_elimination.h
    compiler/optimizing/dead_code_elimination_test.cc
    compiler/optimizing/dominator_test.cc
    compiler/optimizing/find_loops_test.cc
    compiler/optimizing/graph_checker.cc
    compiler/optimizing/graph_checker.h
    compiler/optimizing/graph_checker_test.cc
    compiler/optimizing/graph_test.cc
    compiler/optimizing/graph_visualizer.cc
    compiler/optimizing/graph_visualizer.h
    compiler/optimizing/gvn.cc
    compiler/optimizing/gvn.h
    compiler/optimizing/gvn_test.cc
    compiler/optimizing/inliner.cc
    compiler/optimizing/inliner.h
    compiler/optimizing/instruction_simplifier.cc
    compiler/optimizing/instruction_simplifier.h
    compiler/optimizing/intrinsics.cc
    compiler/optimizing/intrinsics.h
    compiler/optimizing/intrinsics_arm64.cc
    compiler/optimizing/intrinsics_arm64.h
    compiler/optimizing/intrinsics_arm.cc
    compiler/optimizing/intrinsics_arm.h
    compiler/optimizing/intrinsics_list.h
    compiler/optimizing/intrinsics_x86.cc
    compiler/optimizing/intrinsics_x86.h
    compiler/optimizing/intrinsics_x86_64.cc
    compiler/optimizing/intrinsics_x86_64.h
    compiler/optimizing/licm.cc
    compiler/optimizing/licm.h
    compiler/optimizing/linearize_test.cc
    compiler/optimizing/live_interval_test.cc
    compiler/optimizing/live_ranges_test.cc
    compiler/optimizing/liveness_test.cc
    compiler/optimizing/locations.cc
    compiler/optimizing/locations.h
    compiler/optimizing/nodes.cc
    compiler/optimizing/nodes.h
    compiler/optimizing/nodes_test.cc
    compiler/optimizing/optimization.cc
    compiler/optimizing/optimization.h
    compiler/optimizing/optimizing_cfi_test.cc
    compiler/optimizing/optimizing_compiler.cc
    compiler/optimizing/optimizing_compiler.h
    compiler/optimizing/optimizing_compiler_stats.h
    compiler/optimizing/optimizing_unit_test.h
    compiler/optimizing/parallel_move_resolver.cc
    compiler/optimizing/parallel_move_resolver.h
    compiler/optimizing/parallel_move_test.cc
    compiler/optimizing/prepare_for_register_allocation.cc
    compiler/optimizing/prepare_for_register_allocation.h
    compiler/optimizing/pretty_printer.h
    compiler/optimizing/pretty_printer_test.cc
    compiler/optimizing/primitive_type_propagation.cc
    compiler/optimizing/primitive_type_propagation.h
    compiler/optimizing/reference_type_propagation.cc
    compiler/optimizing/reference_type_propagation.h
    compiler/optimizing/register_allocator.cc
    compiler/optimizing/register_allocator.h
    compiler/optimizing/register_allocator_test.cc
    compiler/optimizing/side_effects_analysis.cc
    compiler/optimizing/side_effects_analysis.h
    compiler/optimizing/ssa_builder.cc
    compiler/optimizing/ssa_builder.h
    compiler/optimizing/ssa_liveness_analysis.cc
    compiler/optimizing/ssa_liveness_analysis.h
    compiler/optimizing/ssa_phi_elimination.cc
    compiler/optimizing/ssa_phi_elimination.h
    compiler/optimizing/ssa_test.cc
    compiler/optimizing/stack_map_stream.cc
    compiler/optimizing/stack_map_stream.h
    compiler/optimizing/stack_map_test.cc
    compiler/optimizing/suspend_check_test.cc
    compiler/output_stream.cc
    compiler/output_stream.h
    compiler/output_stream_test.cc
    compiler/trampolines/trampoline_compiler.cc
    compiler/trampolines/trampoline_compiler.h
    compiler/utils/arena_allocator_test.cc
    compiler/utils/arena_bit_vector.cc
    compiler/utils/arena_bit_vector.h
    compiler/utils/arm64/assembler_arm64.cc
    compiler/utils/arm64/assembler_arm64.h
    compiler/utils/arm64/constants_arm64.h
    compiler/utils/arm64/managed_register_arm64.cc
    compiler/utils/arm64/managed_register_arm64.h
    compiler/utils/arm64/managed_register_arm64_test.cc
    compiler/utils/arm/assembler_arm32.cc
    compiler/utils/arm/assembler_arm32.h
    compiler/utils/arm/assembler_arm32_test.cc
    compiler/utils/arm/assembler_arm.cc
    compiler/utils/arm/assembler_arm.h
    compiler/utils/arm/assembler_arm_test.h
    compiler/utils/arm/assembler_thumb2.cc
    compiler/utils/arm/assembler_thumb2.h
    compiler/utils/arm/assembler_thumb2_test.cc
    compiler/utils/arm/constants_arm.h
    compiler/utils/arm/managed_register_arm.cc
    compiler/utils/arm/managed_register_arm.h
    compiler/utils/arm/managed_register_arm_test.cc
    compiler/utils/array_ref.h
    compiler/utils/assembler.cc
    compiler/utils/assembler.h
    compiler/utils/assembler_test.h
    compiler/utils/assembler_test_base.h
    compiler/utils/assembler_thumb_test.cc
    compiler/utils/dedupe_set.h
    compiler/utils/dedupe_set_test.cc
    compiler/utils/dex_cache_arrays_layout-inl.h
    compiler/utils/dex_cache_arrays_layout.h
    compiler/utils/growable_array.h
    compiler/utils/managed_register.h
    compiler/utils/mips64/assembler_mips64.cc
    compiler/utils/mips64/assembler_mips64.h
    compiler/utils/mips64/constants_mips64.h
    compiler/utils/mips64/managed_register_mips64.cc
    compiler/utils/mips64/managed_register_mips64.h
    compiler/utils/mips/assembler_mips.cc
    compiler/utils/mips/assembler_mips.h
    compiler/utils/mips/constants_mips.h
    compiler/utils/mips/managed_register_mips.cc
    compiler/utils/mips/managed_register_mips.h
    compiler/utils/stack_checks.h
    compiler/utils/swap_space.cc
    compiler/utils/swap_space.h
    compiler/utils/swap_space_test.cc
    compiler/utils/test_dex_file_builder.h
    compiler/utils/test_dex_file_builder_test.cc
    compiler/utils/x86/assembler_x86.cc
    compiler/utils/x86/assembler_x86.h
    compiler/utils/x86/assembler_x86_test.cc
    compiler/utils/x86/constants_x86.h
    compiler/utils/x86/managed_register_x86.cc
    compiler/utils/x86/managed_register_x86.h
    compiler/utils/x86/managed_register_x86_test.cc
    compiler/utils/x86_64/assembler_x86_64.cc
    compiler/utils/x86_64/assembler_x86_64.h
    compiler/utils/x86_64/assembler_x86_64_test.cc
    compiler/utils/x86_64/constants_x86_64.h
    compiler/utils/x86_64/managed_register_x86_64.cc
    compiler/utils/x86_64/managed_register_x86_64.h
    compiler/utils/x86_64/managed_register_x86_64_test.cc
    compiler/vector_output_stream.cc
    compiler/vector_output_stream.h
    dalvikvm/dalvikvm.cc
    dex2oat/dex2oat.cc
    disassembler/disassembler.cc
    disassembler/disassembler.h
    disassembler/disassembler_arm64.cc
    disassembler/disassembler_arm64.h
    disassembler/disassembler_arm.cc
    disassembler/disassembler_arm.h
    disassembler/disassembler_mips.cc
    disassembler/disassembler_mips.h
    disassembler/disassembler_x86.cc
    disassembler/disassembler_x86.h
    imgdiag/imgdiag.cc
    imgdiag/imgdiag_test.cc
    oatdump/oatdump.cc
    oatdump/oatdump_test.cc
    patchoat/patchoat.cc
    patchoat/patchoat.h
    runtime/arch/arch_test.cc
    runtime/arch/arm64/asm_support_arm64.h
    runtime/arch/arm64/context_arm64.cc
    runtime/arch/arm64/context_arm64.h
    runtime/arch/arm64/entrypoints_init_arm64.cc
    runtime/arch/arm64/fault_handler_arm64.cc
    runtime/arch/arm64/instruction_set_features_arm64.cc
    runtime/arch/arm64/instruction_set_features_arm64.h
    runtime/arch/arm64/instruction_set_features_arm64_test.cc
    runtime/arch/arm64/quick_method_frame_info_arm64.h
    runtime/arch/arm64/registers_arm64.cc
    runtime/arch/arm64/registers_arm64.h
    runtime/arch/arm64/thread_arm64.cc
    runtime/arch/arm/asm_support_arm.h
    runtime/arch/arm/context_arm.cc
    runtime/arch/arm/context_arm.h
    runtime/arch/arm/entrypoints_init_arm.cc
    runtime/arch/arm/fault_handler_arm.cc
    runtime/arch/arm/instruction_set_features_arm.cc
    runtime/arch/arm/instruction_set_features_arm.h
    runtime/arch/arm/instruction_set_features_arm_test.cc
    runtime/arch/arm/quick_entrypoints_cc_arm.cc
    runtime/arch/arm/quick_method_frame_info_arm.h
    runtime/arch/arm/registers_arm.cc
    runtime/arch/arm/registers_arm.h
    runtime/arch/arm/thread_arm.cc
    runtime/arch/context.cc
    runtime/arch/context.h
    runtime/arch/instruction_set.cc
    runtime/arch/instruction_set.h
    runtime/arch/instruction_set_features.cc
    runtime/arch/instruction_set_features.h
    runtime/arch/instruction_set_features_test.cc
    runtime/arch/instruction_set_test.cc
    runtime/arch/memcmp16.cc
    runtime/arch/memcmp16.h
    runtime/arch/memcmp16_test.cc
    runtime/arch/mips64/asm_support_mips64.h
    runtime/arch/mips64/context_mips64.cc
    runtime/arch/mips64/context_mips64.h
    runtime/arch/mips64/entrypoints_init_mips64.cc
    runtime/arch/mips64/fault_handler_mips64.cc
    runtime/arch/mips64/instruction_set_features_mips64.cc
    runtime/arch/mips64/instruction_set_features_mips64.h
    runtime/arch/mips64/instruction_set_features_mips64_test.cc
    runtime/arch/mips64/quick_method_frame_info_mips64.h
    runtime/arch/mips64/registers_mips64.cc
    runtime/arch/mips64/registers_mips64.h
    runtime/arch/mips64/thread_mips64.cc
    runtime/arch/mips/asm_support_mips.h
    runtime/arch/mips/context_mips.cc
    runtime/arch/mips/context_mips.h
    runtime/arch/mips/entrypoints_direct_mips.h
    runtime/arch/mips/entrypoints_init_mips.cc
    runtime/arch/mips/fault_handler_mips.cc
    runtime/arch/mips/instruction_set_features_mips.cc
    runtime/arch/mips/instruction_set_features_mips.h
    runtime/arch/mips/instruction_set_features_mips_test.cc
    runtime/arch/mips/quick_method_frame_info_mips.h
    runtime/arch/mips/registers_mips.cc
    runtime/arch/mips/registers_mips.h
    runtime/arch/mips/thread_mips.cc
    runtime/arch/stub_test.cc
    runtime/arch/x86/asm_support_x86.h
    runtime/arch/x86/context_x86.cc
    runtime/arch/x86/context_x86.h
    runtime/arch/x86/entrypoints_init_x86.cc
    runtime/arch/x86/fault_handler_x86.cc
    runtime/arch/x86/instruction_set_features_x86.cc
    runtime/arch/x86/instruction_set_features_x86.h
    runtime/arch/x86/instruction_set_features_x86_test.cc
    runtime/arch/x86/quick_method_frame_info_x86.h
    runtime/arch/x86/registers_x86.cc
    runtime/arch/x86/registers_x86.h
    runtime/arch/x86/thread_x86.cc
    runtime/arch/x86_64/asm_support_x86_64.h
    runtime/arch/x86_64/context_x86_64.cc
    runtime/arch/x86_64/context_x86_64.h
    runtime/arch/x86_64/entrypoints_init_x86_64.cc
    runtime/arch/x86_64/instruction_set_features_x86_64.h
    runtime/arch/x86_64/instruction_set_features_x86_64_test.cc
    runtime/arch/x86_64/quick_method_frame_info_x86_64.h
    runtime/arch/x86_64/registers_x86_64.cc
    runtime/arch/x86_64/registers_x86_64.h
    runtime/arch/x86_64/thread_x86_64.cc
    runtime/art_field-inl.h
    runtime/art_field.cc
    runtime/art_field.h
    runtime/art_method-inl.h
    runtime/art_method.cc
    runtime/art_method.h
    runtime/asm_support.h
    runtime/atomic.cc
    runtime/atomic.h
    runtime/barrier.cc
    runtime/barrier.h
    runtime/barrier_test.cc
    runtime/base/allocator.cc
    runtime/base/allocator.h
    runtime/base/arena_allocator.cc
    runtime/base/arena_allocator.h
    runtime/base/arena_containers.h
    runtime/base/arena_object.h
    runtime/base/bit_field.h
    runtime/base/bit_field_test.cc
    runtime/base/bit_utils.h
    runtime/base/bit_utils_test.cc
    runtime/base/bit_vector-inl.h
    runtime/base/bit_vector.cc
    runtime/base/bit_vector.h
    runtime/base/bit_vector_test.cc
    runtime/base/bounded_fifo.h
    runtime/base/casts.h
    runtime/base/debug_stack.h
    runtime/base/dumpable.h
    runtime/base/hash_map.h
    runtime/base/hash_set.h
    runtime/base/hash_set_test.cc
    runtime/base/hex_dump.cc
    runtime/base/hex_dump.h
    runtime/base/hex_dump_test.cc
    runtime/base/histogram-inl.h
    runtime/base/histogram.h
    runtime/base/histogram_test.cc
    runtime/base/iteration_range.h
    runtime/base/logging.cc
    runtime/base/logging.h
    runtime/base/macros.h
    runtime/base/mutex-inl.h
    runtime/base/mutex.cc
    runtime/base/mutex.h
    runtime/base/mutex_test.cc
    runtime/base/scoped_arena_allocator.cc
    runtime/base/scoped_arena_allocator.h
    runtime/base/scoped_arena_containers.h
    runtime/base/scoped_flock.cc
    runtime/base/scoped_flock.h
    runtime/base/scoped_flock_test.cc
    runtime/base/stl_util.h
    runtime/base/stringpiece.cc
    runtime/base/stringpiece.h
    runtime/base/stringprintf.cc
    runtime/base/stringprintf.h
    runtime/base/stringprintf_test.cc
    runtime/base/time_utils.cc
    runtime/base/time_utils.h
    runtime/base/time_utils_test.cc
    runtime/base/timing_logger.cc
    runtime/base/timing_logger.h
    runtime/base/timing_logger_test.cc
    runtime/base/to_str.h
    runtime/base/type_static_if.h
    runtime/base/unix_file/fd_file.cc
    runtime/base/unix_file/fd_file.h
    runtime/base/unix_file/fd_file_test.cc
    runtime/base/unix_file/random_access_file.h
    runtime/base/unix_file/random_access_file_test.h
    runtime/base/unix_file/random_access_file_utils.cc
    runtime/base/unix_file/random_access_file_utils.h
    runtime/base/value_object.h
    runtime/base/variant_map.h
    runtime/base/variant_map_test.cc
    runtime/check_jni.cc
    runtime/check_jni.h
    runtime/check_reference_map_visitor.h
    runtime/class_linker-inl.h
    runtime/class_linker.cc
    runtime/class_linker.h
    runtime/class_linker_test.cc
    runtime/class_reference.h
    runtime/common_runtime_test.cc
    runtime/common_runtime_test.h
    runtime/common_throws.cc
    runtime/common_throws.h
    runtime/compiler_callbacks.h
    runtime/debugger.cc
    runtime/debugger.h
    runtime/dex_file-inl.h
    runtime/dex_file.cc
    runtime/dex_file.h
    runtime/dex_file_test.cc
    runtime/dex_file_verifier.cc
    runtime/dex_file_verifier.h
    runtime/dex_file_verifier_test.cc
    runtime/dex_instruction-inl.h
    runtime/dex_instruction.cc
    runtime/dex_instruction.h
    runtime/dex_instruction_list.h
    runtime/dex_instruction_utils.h
    runtime/dex_instruction_visitor.h
    runtime/dex_instruction_visitor_test.cc
    runtime/dex_method_iterator.h
    runtime/dex_method_iterator_test.cc
    runtime/elf.h
    runtime/elf_file.cc
    runtime/elf_file.h
    runtime/elf_file_impl.h
    runtime/elf_utils.h
    runtime/entrypoints/entrypoint_utils-inl.h
    runtime/entrypoints/entrypoint_utils.cc
    runtime/entrypoints/entrypoint_utils.h
    runtime/entrypoints/interpreter/interpreter_entrypoints.cc
    runtime/entrypoints/interpreter/interpreter_entrypoints.h
    runtime/entrypoints/jni/jni_entrypoints.cc
    runtime/entrypoints/jni/jni_entrypoints.h
    runtime/entrypoints/math_entrypoints.cc
    runtime/entrypoints/math_entrypoints.h
    runtime/entrypoints/math_entrypoints_test.cc
    runtime/entrypoints/quick/callee_save_frame.h
    runtime/entrypoints/quick/quick_alloc_entrypoints.cc
    runtime/entrypoints/quick/quick_alloc_entrypoints.h
    runtime/entrypoints/quick/quick_cast_entrypoints.cc
    runtime/entrypoints/quick/quick_default_externs.h
    runtime/entrypoints/quick/quick_deoptimization_entrypoints.cc
    runtime/entrypoints/quick/quick_dexcache_entrypoints.cc
    runtime/entrypoints/quick/quick_entrypoints.h
    runtime/entrypoints/quick/quick_entrypoints_enum.h
    runtime/entrypoints/quick/quick_entrypoints_list.h
    runtime/entrypoints/quick/quick_field_entrypoints.cc
    runtime/entrypoints/quick/quick_fillarray_entrypoints.cc
    runtime/entrypoints/quick/quick_instrumentation_entrypoints.cc
    runtime/entrypoints/quick/quick_jni_entrypoints.cc
    runtime/entrypoints/quick/quick_lock_entrypoints.cc
    runtime/entrypoints/quick/quick_math_entrypoints.cc
    runtime/entrypoints/quick/quick_thread_entrypoints.cc
    runtime/entrypoints/quick/quick_throw_entrypoints.cc
    runtime/entrypoints/quick/quick_trampoline_entrypoints.cc
    runtime/entrypoints/quick/quick_trampoline_entrypoints_test.cc
    runtime/entrypoints/runtime_asm_entrypoints.h
    runtime/entrypoints_order_test.cc
    runtime/exception_test.cc
    runtime/fault_handler.cc
    runtime/fault_handler.h
    runtime/gc/accounting/atomic_stack.h
    runtime/gc/accounting/bitmap-inl.h
    runtime/gc/accounting/bitmap.cc
    runtime/gc/accounting/bitmap.h
    runtime/gc/accounting/card_table-inl.h
    runtime/gc/accounting/card_table.cc
    runtime/gc/accounting/card_table.h
    runtime/gc/accounting/card_table_test.cc
    runtime/gc/accounting/heap_bitmap-inl.h
    runtime/gc/accounting/heap_bitmap.cc
    runtime/gc/accounting/heap_bitmap.h
    runtime/gc/accounting/mod_union_table-inl.h
    runtime/gc/accounting/mod_union_table.cc
    runtime/gc/accounting/mod_union_table.h
    runtime/gc/accounting/mod_union_table_test.cc
    runtime/gc/accounting/read_barrier_table.h
    runtime/gc/accounting/remembered_set.cc
    runtime/gc/accounting/remembered_set.h
    runtime/gc/accounting/space_bitmap-inl.h
    runtime/gc/accounting/space_bitmap.cc
    runtime/gc/accounting/space_bitmap.h
    runtime/gc/accounting/space_bitmap_test.cc
    runtime/gc/allocator/dlmalloc.cc
    runtime/gc/allocator/dlmalloc.h
    runtime/gc/allocator/rosalloc-inl.h
    runtime/gc/allocator/rosalloc.cc
    runtime/gc/allocator/rosalloc.h
    runtime/gc/allocator_type.h
    runtime/gc/collector/concurrent_copying.cc
    runtime/gc/collector/concurrent_copying.h
    runtime/gc/collector/garbage_collector.cc
    runtime/gc/collector/garbage_collector.h
    runtime/gc/collector/gc_type.h
    runtime/gc/collector/immune_region.cc
    runtime/gc/collector/immune_region.h
    runtime/gc/collector/mark_compact.cc
    runtime/gc/collector/mark_compact.h
    runtime/gc/collector/mark_sweep-inl.h
    runtime/gc/collector/mark_sweep.cc
    runtime/gc/collector/mark_sweep.h
    runtime/gc/collector/partial_mark_sweep.cc
    runtime/gc/collector/partial_mark_sweep.h
    runtime/gc/collector/semi_space-inl.h
    runtime/gc/collector/semi_space.cc
    runtime/gc/collector/semi_space.h
    runtime/gc/collector/sticky_mark_sweep.cc
    runtime/gc/collector/sticky_mark_sweep.h
    runtime/gc/collector_type.h
    runtime/gc/gc_cause.cc
    runtime/gc/gc_cause.h
    runtime/gc/heap-inl.h
    runtime/gc/heap.cc
    runtime/gc/heap.h
    runtime/gc/heap_test.cc
    runtime/gc/reference_processor-inl.h
    runtime/gc/reference_processor.cc
    runtime/gc/reference_processor.h
    runtime/gc/reference_queue.cc
    runtime/gc/reference_queue.h
    runtime/gc/reference_queue_test.cc
    runtime/gc/space/bump_pointer_space-inl.h
    runtime/gc/space/bump_pointer_space.cc
    runtime/gc/space/bump_pointer_space.h
    runtime/gc/space/dlmalloc_space-inl.h
    runtime/gc/space/dlmalloc_space.cc
    runtime/gc/space/dlmalloc_space.h
    runtime/gc/space/dlmalloc_space_base_test.cc
    runtime/gc/space/dlmalloc_space_random_test.cc
    runtime/gc/space/dlmalloc_space_static_test.cc
    runtime/gc/space/image_space.cc
    runtime/gc/space/image_space.h
    runtime/gc/space/large_object_space.cc
    runtime/gc/space/large_object_space.h
    runtime/gc/space/large_object_space_test.cc
    runtime/gc/space/malloc_space.cc
    runtime/gc/space/malloc_space.h
    runtime/gc/space/region_space-inl.h
    runtime/gc/space/region_space.cc
    runtime/gc/space/region_space.h
    runtime/gc/space/rosalloc_space-inl.h
    runtime/gc/space/rosalloc_space.cc
    runtime/gc/space/rosalloc_space.h
    runtime/gc/space/rosalloc_space_base_test.cc
    runtime/gc/space/rosalloc_space_random_test.cc
    runtime/gc/space/rosalloc_space_static_test.cc
    runtime/gc/space/space-inl.h
    runtime/gc/space/space.cc
    runtime/gc/space/space.h
    runtime/gc/space/space_test.h
    runtime/gc/space/valgrind_malloc_space-inl.h
    runtime/gc/space/valgrind_malloc_space.h
    runtime/gc/space/valgrind_settings.h
    runtime/gc/space/zygote_space.cc
    runtime/gc/space/zygote_space.h
    runtime/gc/task_processor.cc
    runtime/gc/task_processor.h
    runtime/gc/task_processor_test.cc
    runtime/gc_map.h
    runtime/gc_root-inl.h
    runtime/gc_root.h
    runtime/globals.h
    runtime/gtest_test.cc
    runtime/handle.h
    runtime/handle_scope-inl.h
    runtime/handle_scope.h
    runtime/handle_scope_test.cc
    runtime/hprof/hprof.cc
    runtime/hprof/hprof.h
    runtime/image.cc
    runtime/image.h
    runtime/indenter.h
    runtime/indenter_test.cc
    runtime/indirect_reference_table-inl.h
    runtime/indirect_reference_table.cc
    runtime/indirect_reference_table.h
    runtime/indirect_reference_table_test.cc
    runtime/instrumentation.cc
    runtime/instrumentation.h
    runtime/instrumentation_test.cc
    runtime/intern_table.cc
    runtime/intern_table.h
    runtime/intern_table_test.cc
    runtime/interpreter/interpreter.cc
    runtime/interpreter/interpreter.h
    runtime/interpreter/interpreter_common.cc
    runtime/interpreter/interpreter_common.h
    runtime/interpreter/interpreter_goto_table_impl.cc
    runtime/interpreter/interpreter_switch_impl.cc
    runtime/interpreter/safe_math.h
    runtime/interpreter/safe_math_test.cc
    runtime/interpreter/unstarted_runtime.cc
    runtime/interpreter/unstarted_runtime.h
    runtime/interpreter/unstarted_runtime_list.h
    runtime/interpreter/unstarted_runtime_test.cc
    runtime/invoke_type.h
    runtime/java_vm_ext.cc
    runtime/java_vm_ext.h
    runtime/java_vm_ext_test.cc
    runtime/jdwp/jdwp.h
    runtime/jdwp/jdwp_adb.cc
    runtime/jdwp/jdwp_bits.h
    runtime/jdwp/jdwp_constants.h
    runtime/jdwp/jdwp_event.cc
    runtime/jdwp/jdwp_event.h
    runtime/jdwp/jdwp_expand_buf.cc
    runtime/jdwp/jdwp_expand_buf.h
    runtime/jdwp/jdwp_handler.cc
    runtime/jdwp/jdwp_main.cc
    runtime/jdwp/jdwp_priv.h
    runtime/jdwp/jdwp_request.cc
    runtime/jdwp/jdwp_socket.cc
    runtime/jdwp/object_registry.cc
    runtime/jdwp/object_registry.h
    runtime/jit/jit.cc
    runtime/jit/jit.h
    runtime/jit/jit_code_cache.cc
    runtime/jit/jit_code_cache.h
    runtime/jit/jit_code_cache_test.cc
    runtime/jit/jit_instrumentation.cc
    runtime/jit/jit_instrumentation.h
    runtime/jni_env_ext-inl.h
    runtime/jni_env_ext.cc
    runtime/jni_env_ext.h
    runtime/jni_internal.cc
    runtime/jni_internal.h
    runtime/jni_internal_test.cc
    runtime/jobject_comparator.cc
    runtime/jobject_comparator.h
    runtime/jvalue.h
    runtime/leb128.h
    runtime/leb128_test.cc
    runtime/linear_alloc.cc
    runtime/linear_alloc.h
    runtime/lock_word-inl.h
    runtime/lock_word.h
    runtime/mapping_table.h
    runtime/mem_map.cc
    runtime/mem_map.h
    runtime/mem_map_test.cc
    runtime/memory_region.cc
    runtime/memory_region.h
    runtime/memory_region_test.cc
    runtime/method_reference.h
    runtime/mirror/abstract_method.cc
    runtime/mirror/abstract_method.h
    runtime/mirror/accessible_object.h
    runtime/mirror/array-inl.h
    runtime/mirror/array.cc
    runtime/mirror/array.h
    runtime/mirror/class-inl.h
    runtime/mirror/class.cc
    runtime/mirror/class.h
    runtime/mirror/class_loader.h
    runtime/mirror/dex_cache-inl.h
    runtime/mirror/dex_cache.cc
    runtime/mirror/dex_cache.h
    runtime/mirror/dex_cache_test.cc
    runtime/mirror/field-inl.h
    runtime/mirror/field.cc
    runtime/mirror/field.h
    runtime/mirror/iftable-inl.h
    runtime/mirror/iftable.h
    runtime/mirror/method.cc
    runtime/mirror/method.h
    runtime/mirror/object-inl.h
    runtime/mirror/object.cc
    runtime/mirror/object.h
    runtime/mirror/object_array-inl.h
    runtime/mirror/object_array.h
    runtime/mirror/object_reference.h
    runtime/mirror/object_test.cc
    runtime/mirror/proxy.h
    runtime/mirror/reference-inl.h
    runtime/mirror/reference.cc
    runtime/mirror/reference.h
    runtime/mirror/stack_trace_element.cc
    runtime/mirror/stack_trace_element.h
    runtime/mirror/string-inl.h
    runtime/mirror/string.cc
    runtime/mirror/string.h
    runtime/mirror/throwable.cc
    runtime/mirror/throwable.h
    runtime/modifiers.h
    runtime/monitor.cc
    runtime/monitor.h
    runtime/monitor_android.cc
    runtime/monitor_linux.cc
    runtime/monitor_pool.cc
    runtime/monitor_pool.h
    runtime/monitor_pool_test.cc
    runtime/monitor_test.cc
    runtime/native/dalvik_system_DexFile.cc
    runtime/native/dalvik_system_DexFile.h
    runtime/native/dalvik_system_VMDebug.cc
    runtime/native/dalvik_system_VMDebug.h
    runtime/native/dalvik_system_VMRuntime.cc
    runtime/native/dalvik_system_VMRuntime.h
    runtime/native/dalvik_system_VMStack.cc
    runtime/native/dalvik_system_VMStack.h
    runtime/native/dalvik_system_ZygoteHooks.cc
    runtime/native/dalvik_system_ZygoteHooks.h
    runtime/native/java_lang_Class.cc
    runtime/native/java_lang_Class.h
    runtime/native/java_lang_DexCache.cc
    runtime/native/java_lang_DexCache.h
    runtime/native/java_lang_Object.cc
    runtime/native/java_lang_Object.h
    runtime/native/java_lang_ref_FinalizerReference.cc
    runtime/native/java_lang_ref_FinalizerReference.h
    runtime/native/java_lang_ref_Reference.cc
    runtime/native/java_lang_ref_Reference.h
    runtime/native/java_lang_reflect_Array.cc
    runtime/native/java_lang_reflect_Array.h
    runtime/native/java_lang_reflect_Constructor.cc
    runtime/native/java_lang_reflect_Constructor.h
    runtime/native/java_lang_reflect_Field.cc
    runtime/native/java_lang_reflect_Field.h
    runtime/native/java_lang_reflect_Method.cc
    runtime/native/java_lang_reflect_Method.h
    runtime/native/java_lang_reflect_Proxy.cc
    runtime/native/java_lang_reflect_Proxy.h
    runtime/native/java_lang_Runtime.cc
    runtime/native/java_lang_Runtime.h
    runtime/native/java_lang_String.cc
    runtime/native/java_lang_String.h
    runtime/native/java_lang_StringFactory.cc
    runtime/native/java_lang_StringFactory.h
    runtime/native/java_lang_System.cc
    runtime/native/java_lang_System.h
    runtime/native/java_lang_Thread.cc
    runtime/native/java_lang_Thread.h
    runtime/native/java_lang_Throwable.cc
    runtime/native/java_lang_Throwable.h
    runtime/native/java_lang_VMClassLoader.cc
    runtime/native/java_lang_VMClassLoader.h
    runtime/native/java_util_concurrent_atomic_AtomicLong.cc
    runtime/native/java_util_concurrent_atomic_AtomicLong.h
    runtime/native/libcore_util_CharsetUtils.cc
    runtime/native/libcore_util_CharsetUtils.h
    runtime/native/org_apache_harmony_dalvik_ddmc_DdmServer.cc
    runtime/native/org_apache_harmony_dalvik_ddmc_DdmServer.h
    runtime/native/org_apache_harmony_dalvik_ddmc_DdmVmInternal.cc
    runtime/native/org_apache_harmony_dalvik_ddmc_DdmVmInternal.h
    runtime/native/scoped_fast_native_object_access.h
    runtime/native/sun_misc_Unsafe.cc
    runtime/native/sun_misc_Unsafe.h
    runtime/native_bridge_art_interface.cc
    runtime/native_bridge_art_interface.h
    runtime/noop_compiler_callbacks.h
    runtime/nth_caller_visitor.h
    runtime/oat.cc
    runtime/oat.h
    runtime/oat_file-inl.h
    runtime/oat_file.cc
    runtime/oat_file.h
    runtime/oat_file_assistant.cc
    runtime/oat_file_assistant.h
    runtime/oat_file_assistant_test.cc
    runtime/oat_file_test.cc
    runtime/object_callbacks.h
    runtime/object_lock.cc
    runtime/object_lock.h
    runtime/offsets.cc
    runtime/offsets.h
    runtime/os.h
    runtime/os_linux.cc
    runtime/parsed_options.cc
    runtime/parsed_options.h
    runtime/parsed_options_test.cc
    runtime/prebuilt_tools_test.cc
    runtime/primitive.cc
    runtime/primitive.h
    runtime/profiler.cc
    runtime/profiler.h
    runtime/profiler_options.h
    runtime/proxy_test.cc
    runtime/quick/inline_method_analyser.cc
    runtime/quick/inline_method_analyser.h
    runtime/quick/quick_method_frame_info.h
    runtime/quick_exception_handler.cc
    runtime/quick_exception_handler.h
    runtime/read_barrier-inl.h
    runtime/read_barrier.h
    runtime/read_barrier_c.h
    runtime/read_barrier_option.h
    runtime/reference_table.cc
    runtime/reference_table.h
    runtime/reference_table_test.cc
    runtime/reflection-inl.h
    runtime/reflection.cc
    runtime/reflection.h
    runtime/reflection_test.cc
    runtime/runtime-inl.h
    runtime/runtime.cc
    runtime/runtime.h
    runtime/runtime_android.cc
    runtime/runtime_linux.cc
    runtime/runtime_options.cc
    runtime/runtime_options.h
    runtime/runtime_stats.h
    runtime/safe_map.h
    runtime/scoped_thread_state_change.h
    runtime/signal_catcher.cc
    runtime/signal_catcher.h
    runtime/signal_set.h
    runtime/stack.cc
    runtime/stack.h
    runtime/stack_map.cc
    runtime/stack_map.h
    runtime/stride_iterator.h
    runtime/thread-inl.h
    runtime/thread.cc
    runtime/thread.h
    runtime/thread_android.cc
    runtime/thread_linux.cc
    runtime/thread_list.cc
    runtime/thread_list.h
    runtime/thread_pool.cc
    runtime/thread_pool.h
    runtime/thread_pool_test.cc
    runtime/thread_state.h
    runtime/trace.cc
    runtime/trace.h
    runtime/transaction.cc
    runtime/transaction.h
    runtime/transaction_test.cc
    runtime/utf-inl.h
    runtime/utf.cc
    runtime/utf.h
    runtime/utf_test.cc
    runtime/utils.cc
    runtime/utils.h
    runtime/utils_test.cc
    runtime/verifier/dex_gc_map.cc
    runtime/verifier/dex_gc_map.h
    runtime/verifier/instruction_flags.cc
    runtime/verifier/instruction_flags.h
    runtime/verifier/method_verifier-inl.h
    runtime/verifier/method_verifier.cc
    runtime/verifier/method_verifier.h
    runtime/verifier/method_verifier_test.cc
    runtime/verifier/reg_type-inl.h
    runtime/verifier/reg_type.cc
    runtime/verifier/reg_type.h
    runtime/verifier/reg_type_cache-inl.h
    runtime/verifier/reg_type_cache.cc
    runtime/verifier/reg_type_cache.h
    runtime/verifier/reg_type_test.cc
    runtime/verifier/register_line-inl.h
    runtime/verifier/register_line.cc
    runtime/verifier/register_line.h
    runtime/verify_object-inl.h
    runtime/verify_object.h
    runtime/vmap_table.h
    runtime/well_known_classes.cc
    runtime/well_known_classes.h
    runtime/zip_archive.cc
    runtime/zip_archive.h
    runtime/zip_archive_test.cc
    sigchainlib/sigchain.cc
    sigchainlib/sigchain.h
    sigchainlib/sigchain_dummy.cc
)

find_package(JNI)

if (JNI_FOUND)
    message (STATUS "JNI_INCLUDE_DIRS=${JNI_INCLUDE_DIRS}")
    message (STATUS "JNI_LIBRARIES=${JNI_LIBRARIES}")
endif()

# find . -type d -not -path "./test*" -not -path "./.git*" -not -path "./.idea*" -not -path "./cmake-build*"
include_directories(
    .
    cmdline
    cmdline/detail
    compiler
    compiler/dex
    compiler/dex/quick
    compiler/dex/quick/arm
    compiler/dex/quick/arm64
    compiler/dex/quick/mips
    compiler/dex/quick/x86
    compiler/driver
    compiler/dwarf
    compiler/jit
    compiler/jni
    compiler/jni/quick
    compiler/jni/quick/arm
    compiler/jni/quick/arm64
    compiler/jni/quick/mips
    compiler/jni/quick/mips64
    compiler/jni/quick/x86
    compiler/jni/quick/x86_64
    compiler/linker
    compiler/linker/arm
    compiler/linker/arm64
    compiler/linker/x86
    compiler/linker/x86_64
    compiler/optimizing
    compiler/optimizing/artist
    compiler/optimizing/artist/doc
    compiler/optimizing/artist/doc/examples
    compiler/optimizing/artist/doc/examples/codelib
    compiler/optimizing/artist/doc/examples/injection
    compiler/optimizing/artist/env
    compiler/optimizing/artist/injection
    compiler/optimizing/artist/modules
    compiler/optimizing/artist/modules/analyzer
    compiler/optimizing/artist/modules/generic
    compiler/optimizing/artist/modules/method-tracing
    compiler/trampolines
    compiler/utils
    compiler/utils/arm
    compiler/utils/arm64
    compiler/utils/mips
    compiler/utils/mips64
    compiler/utils/x86
    compiler/utils/x86_64
    patchoat
    runtime
    runtime/arch
    runtime/arch/arm
    runtime/arch/arm64
    runtime/arch/mips
    runtime/arch/mips64
    runtime/arch/x86
    runtime/arch/x86_64
    runtime/base
    runtime/base/unix_file
    runtime/entrypoints
    runtime/entrypoints/interpreter
    runtime/entrypoints/jni
    runtime/entrypoints/quick
    runtime/gc
    runtime/gc/accounting
    runtime/gc/allocator
    runtime/gc/collector
    runtime/gc/space
    runtime/hprof
    runtime/interpreter
    runtime/jdwp
    runtime/jit
    runtime/mirror
    runtime/native
    runtime/quick
    runtime/verifier
    sigchainlib
    ../libnativehelper/include/nativehelper/
    ${JNI_INCLUDE_DIRS}
)

add_definitions(-DHAVE_ANDROID_OS)

add_executable(art ${SOURCE_FILES})
